--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "monaco-editor": "^0.15.6",
         "net": "^1.0.2",
         "open": "0.0.5",
-        "socket.io": "^2.2.0"
+        "socket.io": "^2.2.0",
+        "terser": "^3.17.0"
     }
 }
